--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,9 @@ buildscript {
         maven {url 'http://developer.huawei.com/repo/'}
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.2'
+        //classpath 'com.android.tools.build:gradle:3.5.2'
+        classpath 'com.android.tools.build:gradle:3.3.1'
+
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
