--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -105,7 +105,7 @@
         <!--<uses-library android:name="org.apache.http.legacy" android:required="false"/>-->
 
         <!-- 设置环信应用的AppKey -->
-        <meta-data android:name="EASEMOB_APPKEY"  android:value="41395119#522319" />
+        <meta-data android:name="EASEMOB_APPKEY"  android:value="easemob-demo#ustestuidemo" />
         <!-- 声明SDK所需的service SDK核心功能-->
         <service
             android:name="com.hyphenate.chat.EMChatService"
